[package]
# Pure-Rust core, polars-style. The Python wheel is built by
# maturin from `crates/kglite-py/` (which depends on this crate).
# Rust embedders depend on this crate directly:
#   kglite = { path = "..." }  # pre-publish
#   kglite = "0.10"            # post-crates.io-publish
name = "kglite"
version.workspace = true
edition = "2021"
authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]
license = "MIT"
description = "Pure-Rust embedded Cypher knowledge graph engine with in-memory, mmap, and disk storage, and agent-facing schema introspection"
readme = "README.md"
repository = "https://github.com/kkollsga/kglite"
homepage = "https://github.com/kkollsga/kglite"
documentation = "https://docs.rs/kglite"
keywords = ["cypher", "knowledge-graph", "graph-database", "embedded-database", "rust"]
categories = ["database", "data-structures"]

[lib]
# `[lib] name = "kglite"` matches the `[package] name` so
# dependent crates do the natural `use kglite::api::*`. The
# kglite-py wrapper uses `[lib] name = "kglite_py"` to avoid
# producing the same rlib filename as this crate (they're different
# artifact types — rlib here, cdylib over there — but cargo still
# requires distinct filenames).
name = "kglite"
doctest = false

# Standalone perf microbench for the bz2 decoder. Requires the
# `parallel-bz2` feature because it calls the optional decoder directly. Run
# with `cargo run -p kglite --bin bz2_bench --release --features
# parallel-bz2 -- <path>`.
[[bin]]
name = "bz2_bench"
path = "src/bin/bz2_bench.rs"
required-features = ["parallel-bz2"]

[features]
default = []
# Rust-native embedder backend behind the `fastembed` Cargo feature.
# Downloads ONNX model weights on first use (cached at
# `~/.cache/fastembed/`). Off by default — the Python wheel relies
# on user-provided Python embedder classes via `PyEmbedderAdapter`,
# and we don't want to pull a 100-200 MB ONNX runtime into every
# wheel build. The `kglite-mcp-server` binary enables this feature
# so the Rust-only deployment path supports `text_score()` semantic
# search without a Python embedder.
fastembed = ["dep:fastembed"]
# Block-level parallel decoder for single-stream `.bz2` files (the
# Wikidata `latest-truthy.nt.bz2` shape). With this feature off the loader
# still parallelises multi-stream pbzip2-produced files; only the
# single-stream block-level path falls back to sequential
# `bzip2::read::MultiBzDecoder`. Wikidata-scale ingest is the only
# workload that actually benefits — opt in if you're decompressing
# > 50 GB single-stream files. The `bz2_bench` binary requires this
# feature.
parallel-bz2 = ["dep:parallel-bz2-redux"]

# OKF (Open Knowledge Format) bundle loader — parses a directory of
# markdown files with YAML frontmatter, cross-linked by markdown links,
# into a knowledge graph (read-only ingestion, like `code_tree` but for
# OKF / memory / skills / Obsidian bundles). Off by default so the bare
# crate pulls no YAML parser; the Python wheel enables it. `regex` (link
# extraction) and `walkdir` (tree walk) are already non-optional deps.
okf = ["dep:yaml-rust2"]
# General-purpose RDF loader (Turtle / N-Triples / N-Quads / TriG via
# the oxttl parser family). Off by default so the bare crate pulls no
# RDF parser; `oxttl` + `oxrdf` are only in the dep tree when `rdf` is
# enabled. Phase 1 covers the in-memory (Default) backend only.
rdf = ["dep:oxttl", "dep:oxrdf"]

# `--cfg loom` is set manually when running the loom interleaving model
# (tests/loom_session.rs); register it so normal builds don't warn (and
# `make lint`'s `-D warnings` doesn't fail) on the `#[cfg(loom)]` gate.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]
petgraph = { version = "0.8.3", features = ["serde-1"] }
fastembed = { version = "5", optional = true, default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
chrono = { version = "0.4.45", features = ["serde"] }
geo = "0.33"
rstar = "0.13"
wkt = "0.14"
regex = "1"
rayon = "1.12"
flate2 = "1"
zstd = "0.13"
memmap2 = "0.9"
libc = "0.2"
bzip2 = "0.6"
# Published, bounded-memory block-parallel decoder for both ordinary
# single-stream and concatenated `.bz2` data. Optional so graph-only users do
# not pull its scanner/pipeline dependencies.
parallel-bz2-redux = { version = "1.1.1", optional = true }
walkdir = "2.5.0"
tempfile = "3"
fs2 = "0.4"
sha2 = "0.11"
memchr = "2"
rustc-hash = "2"
# On-demand stack growth for the recursive-descent Cypher parser: keeps
# MAX_EXPRESSION_DEPTH-deep queries from overflowing default thread stacks
# in debug builds, where frames are several times larger than release.
stacker = "0.1"
csv = "1.4"
geojson = "1.0"
indexmap = { version = "2", features = ["serde"] }

# OKF loader YAML frontmatter parser — gated behind the `okf` feature.
# `yaml-rust2` is a pure-Rust, actively-maintained YAML 1.2 parser (no
# `unsafe`/libyaml, no unmaintained advisory); only pulled when `okf` is
# enabled (the wheel enables it; bare builds don't).
yaml-rust2 = { version = "0.11", optional = true }

# RDF loader deps — gated behind the `rdf` feature. `oxttl` is the
# Oxigraph family's standalone Turtle/N-Triples/N-Quads/TriG parser;
# it re-exports `oxrdf` term types (Triple / Quad / Term / Literal).
# oxttl 0.2.3 resolves oxrdf 0.3.x — pin oxrdf to the version oxttl
# pulls so they agree on the term types.
oxttl = { version = "0.2", optional = true }
oxrdf = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies]
same-file = "1"

[dev-dependencies]
tempfile = "3"

# loom — exhaustive interleaving model-checker for the Session commit/snapshot
# lock pattern. Only pulled in under `--cfg loom` (the loom test is
# `#![cfg(loom)]`), so normal `cargo test` / `cargo build` never compile it.
# Run: RUSTFLAGS="--cfg loom" cargo test -p kglite --test loom_session
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

# docs.rs builds with these features so the published API page covers
# the optional loaders + fastembed adapter, which would otherwise be
# missing (defaults are intentionally empty). `rustdoc-args` enables doc-cfg
# annotations so feature-gated APIs are visually marked on the page.
[package.metadata.docs.rs]
features = ["fastembed", "okf", "rdf", "parallel-bz2"]
rustdoc-args = ["--cfg", "docsrs"]
